--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-flash-message": "^2.1.0",
     "express-session": "^1.17.1",
+    "faker": "^5.5.3",
     "http-errors": "~1.6.3",
     "i18n": "^0.13.3",
     "mongoose": "^5.11.19",
+    "mongoose-seed": "^0.6.0",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
