--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-mongo": "^4.2.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-flash-message": "^2.1.0",
@@ -19,6 +20,7 @@
     "faker": "^5.5.3",
     "http-errors": "~1.6.3",
     "i18n": "^0.13.3",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.19",
     "mongoose-seed": "^0.6.0",
     "morgan": "~1.9.1",
