--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-errors": "~1.6.3",
     "i18n": "^0.13.3",
     "moment": "^2.29.1",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.19",
     "mongoose-seed": "^0.6.0",
     "morgan": "~1.9.1",
