--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18n": "^0.13.3",
     "moment": "^2.29.1",
     "mongoose": "^5.11.19",
+    "mongoose-paginate": "^5.0.3",
     "mongoose-seed": "^0.6.0",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
