--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "faker": "^5.5.3",
     "http-errors": "~1.6.3",
     "i18n": "^0.13.3",
+    "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.19",
     "mongoose-paginate": "^5.0.3",
