--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "connect-mongo": "^4.2.2",
@@ -26,7 +27,9 @@
     "mongoose-paginate": "^5.0.3",
     "mongoose-seed": "^0.6.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0"
   },
